5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1724_2518.log
== TEST (2019-05-14 20:54:15) 
-- CODE:
n= int(input("insira um numero natural: "))
s=n
while s!=1:	
if (n%2==0):
		m= "PAR"
	else:
		m= "IMPAR"
if m=="PAR":
	s=n//2
elid m=="IMPAR":
	s=n*3+1
-- ERROR:
File "XXXX", line 4
    if (n%2==0):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:54:28) 
-- CODE:
n= int(input("insira um numero natural: "))
s=n
while s!=1:	
if (n%2==0):
		m= "PAR"
else:
		m= "IMPAR"
if m=="PAR":
	s=n//2
elid m=="IMPAR":
	s=n*3+1
-- ERROR:
File "XXXX", line 4
    if (n%2==0):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:54:59) 
-- CODE:
n= int(input("insira um numero natural: "))
s=n
while s!=1:
	if (n%2==0):
		m= "PAR"
	else:
		m= "IMPAR"
	if m=="PAR":
		s=n//2
	elif m=="IMPAR":
		s=n*3+1
-- ERROR:
File "XXXX", line 4
    if (n%2==0):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:55:26) 
-- CODE:
n= int(input("insira um numero natural: "))
s=n
while s!=1:
	if (n%2==0):
		m= "PAR"
	else:
		m= "IMPAR"
	if m=="PAR":
		s=n//2
		print(s)
	elif m=="IMPAR":
		s=n*3+1
		print(s)
-- OUTPUT:
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:57:21) 
-- CODE:
n= int(input("insira um numero natural: "))
s=n
while s!=1:
	if s%2==0:
		s=s//2
	else:
		s=s*3+1
print(s)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:57:27) 
-- CODE:
n= int(input("insira um numero natural: "))
s=n
while s!=1:
	if s%2==0:
		s=s//2
	else:
		s=s*3+1
	print(s)
-- OUTPUT:
5
16
8
4
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:57:41) 
-- CODE:
n= int(input("insira um numero natural: "))
s=n
while s!=1:
	if s%2==0:
		s=s//2
	else:
		s=s*3+1
	print(s)
-- OUTPUT:
5
16
8
4
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 20:57:57) 
-- CODE:
n= int(input("insira um numero natural: "))
s=n
while s!=1:
	if s%2==0:
		s=s//2
	else:
		s=s*3+1
	print(s)
-- EXECUTION TIME:
0.234469
-- TEST CASE 1:
---- input:
10 
---- correct output:
5
16
8
4
2
1
---- user output:
5
16
8
4
2
1
-- TEST CASE 2:
---- input:
45
---- correct output:
136
68
34
17
52
26
13
40
20
10
5
16
8
4
2
1
---- user output:
136
68
34
17
52
26
13
40
20
10
5
16
8
4
2
1
-- TEST CASE 3:
---- input:
13
---- correct output:
40
20
10
5
16
8
4
2
1
---- user output:
40
20
10
5
16
8
4
2
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
